<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/adminpagos"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imgadminmesa"
        android:src="@drawable/ic_launcher" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="40dp" >

        <TableRow android:weightSum="10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/nombre"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@drawable/editextselec"
                android:inputType="text"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:weightSum="10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/abreviacion"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editabreviacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@drawable/editextselec"
                android:inputType="text"
                android:textSize="25sp" />
        </TableRow>
        
        <TableRow
            android:layout_marginTop="10dp"
            android:weightSum="10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/cuetcontable"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@drawable/editextselec"
                android:inputType="text"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/btnnuevo"
            style="@style/btnstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nuevo" />

        <Button
            android:id="@+id/btnguardar"
            style="@style/btnstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btncancelar"
            style="@style/btnstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>