<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/actualizacion"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="40dp" 
        android:paddingRight="40dp">

        <TableRow android:weightSum="10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/nombre"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@drawable/editextselec"
                android:inputType="text"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:weightSum="10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/usuario"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/seccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@drawable/editextselec"
                android:inputType="text"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checked="false"
        android:text="@string/activo"
        android:layout_gravity="center_horizontal"/> 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnguardar"
            style="@style/btnstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btncancelar"
            style="@style/btnstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cambbiarpass" />
    </LinearLayout>

</LinearLayout>