<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/good" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/condigo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextselec"
            android:hint="@string/codigo"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo"
            android:padding="5dp"
            android:src="@drawable/abc_ic_ab_back_holo_light" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TableRow
                android:layout_marginTop="10dp"
                android:weightSum="10" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/almacen"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_weight="9"
                    android:background="@drawable/spinner_select" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:weightSum="10" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/nseccion"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nseccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="@drawable/editextselec"
                    android:inputType="text"
                    android:textSize="25sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/nuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/imgbtn"
            android:contentDescription="@string/nuevo"
            android:src="@drawable/nuevo" 
            android:padding="5dp"/>

        <ImageButton
            android:id="@+id/editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_toEndOf="@id/nuevo"
            android:layout_toRightOf="@id/nuevo"
            android:background="@drawable/imgbtn"
            android:contentDescription="@string/editar"
            android:src="@drawable/editar" 
            android:padding="5dp"/>

        <ImageButton
            android:id="@+id/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_toEndOf="@id/editar"
            android:layout_toRightOf="@id/editar"
            android:background="@drawable/imgbtn"
            android:contentDescription="@string/eliminar"
            android:src="@drawable/delete" 
            android:padding="5dp"/>

        <ImageButton
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@id/eliminar"
            android:layout_toRightOf="@id/eliminar"
            android:background="@drawable/imgbtn"
            android:contentDescription="@string/guardar"
            android:src="@drawable/save" 
            android:padding="5dp"/>

        <Button
            android:id="@+id/salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/imgbtn"
            android:contentDescription="@string/guardar"
            android:src="@drawable/save"
            android:text="@string/salir" 
            android:padding="5dp"/>
    </RelativeLayout>

</LinearLayout>