<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/good" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="10" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:text="@string/cod"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="start"
                    android:text="@string/dta"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/grid"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:dividerHeight="2dp" >
            </ListView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="4" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/borderlayout"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TableRow android:weightSum="10" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/codigo"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@drawable/editextselec"
                        android:inputType="text"
                        android:textSize="25sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/nombre"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editabreviacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@drawable/editextselec"
                        android:inputType="text"
                        android:textSize="25sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/factor"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editcuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@drawable/editextselec"
                        android:inputType="text"
                        android:textSize="25sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/equivalencia"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@drawable/editextselec"
                        android:inputType="text"
                        android:textSize="25sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/padre"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_weight="9"
                        android:background="@drawable/spinner_select" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:padding="5dp"
                android:text="@string/info"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nuevo"
            android:contentDescription="@string/nuevo" 
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp"
            android:id="@+id/nuevo"
            android:background="@drawable/imgbtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        
        <ImageButton
            android:id="@+id/editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/editar"
            android:contentDescription="@string/editar"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/imgbtn"
            android:layout_toRightOf="@id/nuevo"
            android:layout_toEndOf="@id/nuevo"/>
        
        <ImageButton
            android:id="@+id/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"
            android:contentDescription="@string/eliminar"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/imgbtn" 
            android:layout_toRightOf="@id/editar"
            android:layout_toEndOf="@id/editar"/>
        
         <ImageButton
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/save"
            android:contentDescription="@string/guardar"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/imgbtn"
            android:layout_toRightOf="@id/eliminar"
            android:layout_toEndOf="@id/eliminar"/>
         
         <Button
            android:id="@+id/salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/save"
            android:contentDescription="@string/guardar"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:text="@string/salir"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/imgbtn"/>
         
    </RelativeLayout>

</LinearLayout>